fix: base spacing

--- a/src/style.css
+++ b/src/style.css
@@ -128,7 +128,7 @@ code {
   }
 
   .base {
-    width: 170px;
+    width: 171px;
     position: relative;
     z-index: 0;
   }
